Preview and Apache hosting

--- a/3.md
+++ b/3.md
@@ -1,7 +1,7 @@
 Now, we are able to create our basic html page. If you have already done the Web Development worksheet, then you could
 download your work from that and then do file-upload local files to upload it. If not, then you can do file-new file and put in the following: 
 
-```
+```html
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,6 +12,7 @@ download your work from that and then do file-upload local files to upload it. I
     <p>
         My page has some fake content. <br>
         Here is some more.
+    </p>
 </body>
 </html>
 ```
