--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-#CLOUD9 IDE
+#1. CLOUD9 IDE
 
 This worksheet will teach you about cloud9 - an online **integrated development environment** - 
 a place to write your code. The first thing to do is sign up at [c9.io](https://www.c9.io).
@@ -6,4 +6,3 @@ a place to write your code. The first thing to do is sign up at [c9.io](https://
 ---
 
 ![alt text](https://d6ff1xmuve0sx.cloudfront.net/nc-3.0.2682-ccb284b8/static/homepage/images/c9-web/top-carrousel-5.png)
-
