--- a/4.md
+++ b/4.md
@@ -1,15 +1,17 @@
+4. Live preview
+
 Now, click the Preview button on the top bar (next to run). Select "live preview file", and then you will see your
-html file rendered on the right, as it would look in a browser. Now, your can add some things to your previous html file. I'm going to add a link to
+html file rendered on the right, as it would look in a browser. Now, your can add some things to your previous html file. **Don't close the preview!** I'm going to add a link to
 project tigr. I will put it between the `</p>` and the `</body>`.
 
 
 ```html
 <a href="https://www.project-tigr.co.uk">Go to tigr</a>
 ```
-
+ Can you see your preview updating as you type?
 ---
 
-If you closed your preview tab, open it back up and click on your link. **Nothing happens**.
+Click on your link. **Nothing happens**.
 This is because cloud9 is smart and knows that you probably don't want to go off the page you are on - your workspace.
 
 This is good, as cloud9 can also host your test website for you. Let's do that now.
