--- a/3.md
+++ b/3.md
@@ -1,3 +1,5 @@
+#3. Add a file
+
 Now, we are able to create our basic html page. If you have already done the Web Development worksheet, then you could
 download your work from that and then do file-upload local files to upload it. If not, then you can do file-new file and put in the following: 
 
@@ -17,6 +19,6 @@ download your work from that and then do file-upload local files to upload it. I
 </html>
 ```
 
-If you wanted to change your content to actual content then you could. Maybe you could copy your svg emoji in as well.
+If you wanted to change your content then you could. Maybe you could copy your svg emoji in as well.
 
 When you are done, hit ctrl+S to save your file.
