better new workspace

--- a/1.md
+++ b/1.md
@@ -2,6 +2,7 @@
 
 This worksheet will teach you about cloud9 - an online **integrated development environment** - 
 a place to write your code. The first thing to do is sign up at [c9.io](https://www.c9.io).
+If you already have github, you can sign in with that.
 
 ---
 
