--- a/2.md
+++ b/2.md
@@ -9,4 +9,5 @@ pretty unique and fancy stuff.
 
 Click the create new workspace button, and give your workspace a name and a description - 
 I'll call mine test. Choose custom for the workspace template, and when you hit create
-new, then it will load up your brand new workspace.
+new, then it will load up your brand new workspace. You can then see all of your
+files in the tree on the right, and create a new one with the menus at the top.
