--- a/2.md
+++ b/2.md
@@ -3,7 +3,7 @@ Then, from the dashboard, create a new workspace.
 
 ---
 
-Cloud9 workspaces are actually a virtual machine running ubuntu. This basically means
+Cloud9 workspaces are actually virtual machines running ubuntu. This basically means
 that the people at Cloud9 have made a pretend computer, and that means you can do some
 pretty unique and fancy stuff.
 
