closer to lua runner

--- a/7.md
+++ b/7.md
@@ -12,3 +12,5 @@ Here is what happened:
 `apt-get`: this is the package manager.
 `install`: this is a package manager command for install new package.
 `lua5.2`: the package to install
+
+Now you can also write a lua script and run it using this command.
