--- a/2.md
+++ b/2.md
@@ -1,13 +1,16 @@
 #2. New Workspace
-Then, from the dashboard, create a new workspace. 
-
 ---
 
-Cloud9 workspaces are actually virtual machines running ubuntu. This basically means
-that the people at Cloud9 have made a pretend computer, and that means you can do some
+Cloud9 workspaces are actually virtual machines running ubuntu. basicaly, a 
+pretend computer. This means you can do some
 pretty unique and fancy stuff.
 
-Click the create new workspace button, and give your workspace a name and a description - 
-I'll call mine test. Choose custom for the workspace template, and when you hit create
+Click the create new workspace button, and give your workspace a name and a
+
+description - 
+I'll call mine test. Choose custom for the workspace template, and when you 
+hit create
 new, then it will load up your brand new workspace. You can then see all of your
 files in the tree on the right, and create a new one with the menus at the top.
+
+![Image](https://ide.c9.io/gforcedev/cloud9-sheet/newWorkspace.PNG)
