--- a/2.md
+++ b/2.md
@@ -13,4 +13,4 @@ hit create
 new, then it will load up your brand new workspace. You can then see all of your
 files in the tree on the right, and create a new one with the menus at the top.
 
-![Image](newWorkspace.PNG0)
+![Image](newWorkspace.PNG)
