another screenshot commit

--- a/4.md
+++ b/4.md
@@ -15,3 +15,5 @@ Click on your link. **Nothing happens**.
 This is because cloud9 is smart and knows that you probably don't want to go off the page you are on - your workspace.
 
 This is good, as cloud9 can also host your test website for you. Let's do that now.
+
+![preview](preview.PNG)
