--- a/5.md
+++ b/5.md
@@ -7,3 +7,5 @@ Click the run button next to preview, and you will see a new tab appear saying "
 Mine will be slightly different to yours. Copy and paste the bit in bold, and paste it into a new tab in your browser.
 Voila! You can see your webpage, and your links work properly. If you have a server error, check if there is a dot at the end of the url bar - eg 
 "test.html**.**"
+
+![apacheTest](apacheTest.PNG)
