--- a/3.md
+++ b/3.md
@@ -22,3 +22,5 @@ download your work from that and then do file-upload local files to upload it. I
 If you wanted to change your content then you could. Maybe you could copy your svg emoji in as well.
 
 When you are done, hit ctrl+S to save your file.
+
+![new file](newWorkspace.PNG)
