All of the Screenshots are done!

--- a/6.md
+++ b/6.md
@@ -2,7 +2,7 @@
 
 
 
-We have just scratched the surface of what cloud can do. Maybe you want to test your 
+We have just scratched the surface of what cloud9 can do. Maybe you want to test your 
 website in different browsers without leaving your workspace. Maybe you want to try
 a language you've never tried before. Or perhaps you want to use an interpreter for
 your language, like the python console. I will show you how to do this.
